\newcommand{\PR}{\Sexpr[results=rd]{tools:::Rd_expr_PR(#1)}}
\newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}

\name{NEWS}
\title{ pqR News}
\encoding{UTF-8}


\section{CHANGES IN VERSION RELEASED 2017-05-05}{

  \subsection{INTRODUCTION}{
  \itemize{ 
  \item pqR now uses a new garbage collector and new schemes for memory
        layout.  Objects are represented more compactly, much more compactly
        if ``compressed pointers'' are used. Garbage collection is faster,
        and will have a more localized memory access/write pattern, which
        may be of significance for cache performance and for performance with
        functions like \code{mclapply} from the \code{parallel} package.

        The new garbage collection scheme uses a general-purpose Segmented
        Generational Garbage Collector, the source code for which is at
        https://gitlab.com/radfordneal/sggc
  }}

  \subsection{INSTALLATION}{
  \itemize{
  \item There is now an \code{--enable-compressed-pointers} option to
        \code{configure}.  When included, pqR will be built with 
        32-bit compressed pointers, which considerably reduces
        memory usage (especially if many small objects are used) 
        on a system with 64-bit pointers (slightly on
        a system with 32-bit pointers).  Use of compressed pointers
        results in a speed penalty on some tasks of up to about 30\%,
        while on other tasks the lower memory usage may improve speed.
  \item There is now an \code{--enable-aux-for-attrib} option to
        \code{configure}.  This is ignored if 
        \code{--enable-compressed-pointers} is used, or if the platform
        does not use 64-bit pointers.  Otherwise, it results in 
        attributes for objects being stored as ``auxiliary information'',
        which allows for some objects to be stored more compactly,
        with possible speed and memory advantages.
  }}

  \subsection{DOCUMENTATION AND FEATURE CHANGES}{