@@ -6529,33 +6529,6 @@ corresponds to the @code{step} argument to @code{gctorture},
 @env{R_GCTORTURE_WAIT} to @code{wait}, and
 @env{R_GCTORTURE_INHIBIT_RELEASE} to @code{inhibit_release}.
 
-If @R{} is configured with @option{--enable-strict-barrier} then a
-variety of tests for the integrity of the write barrier are enabled.  In
-addition tests to help detect protect issues are enabled as well:
-
-@itemize @bullet
-
-@item
-All GCs are full GCs.
-
-@item
-New nodes in small node pages are marked as @code{NEWSXP} on creation.
-
-@item
-After a GC all free nodes that are not of type @code{NEWSXP} are marked
-as type @code{FREESXP} and their previous type is recorded.
-
-@item
-Most calls to accessor functions check their @code{SEXP} inputs and
-@code{SEXP} outputs and signal an error if a @code{FREESXP} is found.
-The address of the node and the old type are included in the error
-message.
-
-@end itemize
-
-Used with a debugger and with @code{gctorture} or @code{gctorture2} this
-mechanism can be helpful in isolating memory protect problems.
-
 
 @node Using valgrind,  , Using gctorture, Using gctorture and valgrind
 @subsection Using valgrind
